# AIwaifu

./: .env.example  .gitignore  LICENSE  README.md  aphrodite-engine-compose.yml  api_inference_server.py  config.py  conversation.py  example.py  local_inference_client_waifu.py  main.py  ollama-gpu-compose.yml  pyproject.toml  readme.md  requirements.txt  test_chat.py  test_sound.py  vtube_studio.py
AIVoifu/: LICENSE  README.md  client_pipeline.py  test.py  test_convert.py
AIVoifu/tts/: tts.py
AIVoifu/tts/tts_base_models/: readme.md
AIVoifu/tts/tts_base_models/khanomtal11/: config.json  config_se.json  language_ids.json  nconfig.json  speech.py
AIVoifu/voice_conversion/: config.json  vc_inference.py
AIVoifu/voice_conversion/RVC/: README.md  config.py  pyproject.toml  python_inference.py  requirements.txt  vc_infer_pipeline.py
AIVoifu/voice_conversion/RVC/infer_pack/: attentions.py  models.py  models_onnx.py  modules.py
AIVoifu/voice_conversion/Sovits/: attentions.py  data_utils.py  models.py  modules.py
AIVoifu/voice_conversion/Sovits/configs/: sovits.json
AIVoifu/voice_conversion/Sovits/filelists/: train_filelist.txt  train_filelist_idx.txt  val_filelist.txt  val_filelist_idx.txt
AIVoifu/voice_conversion/Sovits/monotonic_align/: core.c
AIVoifu/voice_conversion/Sovits/monotonic_align/monotonic_align/: core.cp38-win_amd64.pyd
AIVoifu/voice_conversion/zoo/: readme.md
AIVoifu/voice_conversion/zoo/alice/: meta.json
AIVoifu/voice_conversion/zoo/ayaka-jp/: meta.json
AIVoifu/voice_conversion/zoo/genshin-klee/: meta.json
AIVoifu/voice_conversion/zoo/openwaifu_base-chtolly/: meta.json
AIVoifu/voice_conversion/zoo/sora/: meta.json
AIVoifu/voice_conversion/zoo/zomehwh_sovits-teio/: meta.json
Conversation/: conversation.py
Conversation/translation/: pipeline.py
anime_tts/: .gitignore  1374_epochs.pth  README.md  aa.ipynb  app.py  attentions.py  config.py  custom_inference.py  infer.py  models.py  modules.py  requirements.txt  utils.py  vits_api.py
anime_tts/configs/: config.json  vits_pre.json
anime_tts/text/: __init__.py  cleaners.py  mandarin.py
so-vits-svc/: README.md  README_zh_CN.md  compress_model.py  requirements_onnx_encoder.txt
so-vits-svc/cluster/: kmeans.py
so-vits-svc/diffusion/: onnx_export.py
so-vits-svc/edgetts/: tts.py  tts_voices.py
so-vits-svc/modules/F0Predictor/: FCPEF0Predictor.py
so-vits-svc/modules/F0Predictor/fcpe/: __init__.py  model.py
so-vits-svc/vencoder/: WhisperPPGLarge.py
