[tool.poetry]
name = "aiwaifu"
version = "0.1.0"
description = "foundational ai waifu development platform for any developer"
authors = ["HRNPH <hrnph@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.17"
aiohttp = "^3.8.4"
aiosignal = "^1.3.1"
appdirs = "^1.4.4"
async-timeout = "^4.0.2"
attrs = "^23.1.0"
audioread = "^3.0.0"
catalogue = "^2.0.8"
certifi = "^2023.7.22"
cffi = "^1.15.1"
charset-normalizer = "^3.2.0"
click = "^8.1.4"
cn2an = "^0.5.20"
colorama = "^0.4.6"
confection = "^0.1.0"
cymem = "^2.0.7"
cython = "^0.29.36"
datasets = "^2.13.1"
decorator = "^5.1.1"
dill = "^0.3.6"
emoji = "^1.6.1"
filelock = "^3.12.2"
frozenlist = "^1.3.3"
fsspec = "^2023.6.0"
gevent = "^22.10.2"
greenlet = "^2.0.2"
huggingface-hub = "^0.16.4"
idna = "^3.4"
importlib-metadata = "^6.8.0"
jieba = "^0.42.1"
jinja2 = "^3.1.2"
joblib = "^1.3.1"
langcodes = "^3.3.0"
lazy-loader = "^0.3"
librosa = "^0.10.0.post2"
llvmlite = "^0.40.1"
markupsafe = "^2.1.3"
msgpack = "^1.0.5"
multidict = "^6.0.4"
multiprocess = "^0.70.14"
murmurhash = "^1.0.9"
numba = "^0.57.1"
packaging = "^23.1"
pandas = "^2.0.3"
pathy = "^0.10.2"
preshed = "^3.0.8"
proces = "^0.1.4"
pyarrow = "^12.0.1"
pycparser = "^2.21"
pydub = "^0.25.1"
pypinyin = "^0.49.0"
python-dateutil = "^2.8.2"
pytz = "^2023.3"
pyyaml = "^6.0"
regex = "^2023.6.3"
requests = "^2.31.0"
responses = "^0.23.1"
romajitable = "^0.0.1"
scikit-learn = "^1.3.0"
sentencepiece = "^0.1.99"
six = "^1.16.0"
smart-open = "^6.3.0"
soundfile = "^0.12.1"
soxr = "^0.3.5"
spacy-legacy = "^3.0.12"
spacy-loggers = "^1.0.4"
srsly = "^2.4.6"
threadpoolctl = "^3.1.0"
tokenizers = "^0.13.3"
torch = "^2.0.1"
tqdm = "^4.65.0"
transformers = "^4.30.2"
typing-extensions = "^4.7.1"
unicode = "^2.9"
unidecode = "^1.3.6"
urllib3 = "^2.0.3"
websocket-client = "^1.6.1"
websockets = "^11.0.3"
xxhash = "^3.2.0"
yarl = "^1.9.2"
zipp = "^3.16.0"
zope-event = "^5.0"
zope-interface = "^6.0"
accelerate = "^0.20.3"
torchaudio = "^2.0.2"
wget = "^3.2"
pysentimiento = "^0.7.1"
pyaudio = "^0.2.13"
wheel = "^0.40.0"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
gtts = "^2.3.2"
fairseq = "^0.12.2"
praat-parselmouth = "^0.4.3"
pyworld = "^0.3.4"
faiss-cpu = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
